# wsplugin

./: CMakeLists.txt
src/: CMakeLists.txt
src/include/: destr_proto.h
src/receiver/: CMakeLists.txt
src/sender/: CMakeLists.txt  main.cpp  sender.h
src/wsplugin/: CMakeLists.txt  wsplugin.c
